# zfl

./: .clangd  .gitignore  Makefile  README.md  common.h  cson.h  da.h  http.h  net-setup.sh  net.h  nn.h  report.tex  sb.h  test.c  zeth.conf  zfl  zfl.c  zflclient.conf  zflserver.conf
http_client/src/: main.c
py-server/: data  data.c  main.py  train-labels-1  train-labels-3
py-server/fashion/: train-images-1  train-images-4
py-server/saved_model/variables/: variables.index
report/: refs.bib  report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc  report.xdv
report/graphics/: accuracy.eps  avg-training.eps  bytes-recv.eps  bytes-sent.eps  loss.eps  round-time.eps  tcp-dropped.eps  tcp-rexmit.eps
tools/: data  data.c  main.py  model.tflite  requirements.txt  stats.py  train-labels-2  train-labels-4  train-labels-main
tools/fashion/: train-images-2  train-images-3  train-images-5  train-images-6
tools/saved_model/: fingerprint.pb  saved_model.pb
tools/saved_model/variables/: variables.data-00000-of-00001
zfl_client/: overlay-e1000.conf  prj.conf
zfl_client/src/: main.c
zflclient/: CMakeLists.txt  overlay-e1000.conf  prj.conf
zflclient/src/: common.h  cson.h  main.c  nn.h  sb.h  train.c  train.h
zflserver/: CMakeLists.txt  initial_weights.json  prj.conf  server  stats.json  test.json
zflserver/src/: http.h  initial_weights.json  main.c  model.hpp  train.c  train.cpp  train.h
